Update IIIF content URLs to use the correct endpoint format across multiple files and add new metadata entries for health-related topics.

--- a/content/samlingene-og-tilvekst.mdx
+++ b/content/samlingene-og-tilvekst.mdx
@@ -28,7 +28,7 @@ Problemet lå i selve samlingsforvaltningen og utstillingsmetodikken, alle gjens
 
 Voksesmerter og plassmangel har altså preget denne utviklingen i infrastruktur og samlingsforvaltning, og gjør det til dels også i dag. Men dette er ikke unikt for museet og biblioteket i Bergen, det samme gjelder for alle levende museer, arkiv og bibliotek. For stikkordet her er nettopp levende. Levende samlinger har tilvekst, de er ikke avsluttede. På samme vis som denne digitale portalen skal utvikles og utvides og være en levende påminnelse om den felles kulturarven vi er så heldige å bevare, skal også samlingene våre utvikles og utvides gjennom kontinuerlig tilvekst. Samlingene er grunnlaget for vår virksomhet, uten dem har vi ingenting å forske på eller formidle.
 
-<Work className="feature" iiifContent="https://api.ub.uib.no/items/ubb-bs-q-00348?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/object/ubb-bs-q-00348?as=iiif">
   <Work.Content>
     <Work.Description>
       Bergens Museums bibliotek, fra tidlig 1900-tallet. Universitetsbiblioteket i Bergen.
@@ -38,7 +38,5 @@ Voksesmerter og plassmangel har altså preget denne utviklingen i infrastruktur 
     </Work.Link>
   </Work.Content>
 </Work>
-
-
 
 </ContentGrid>
