--- a/content/tema/bokstaver-og-tegn/fragmenter.mdx
+++ b/content/tema/bokstaver-og-tegn/fragmenter.mdx
@@ -27,7 +27,7 @@ Når en bok etter lang tids (kanskje uvøren) bruk går litt i oppløsning, så 
 
 Eller enda sjeldnere - at de dukker opp under en arkeologisk utgravning. Det var nettopp det som skjedde på 1960-tallet, når det ble foretatt arkeologiske utgravninger under kirkegulvet på Kaupanger kirke. Der dukket fire knøttsmå manuskript-fragmenter opp, som senere ble gitt til biblioteket.
 
-<Work iiifContent="https://api.ub.uib.no/items/ubb-ms-1549-07-c?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/object/ubb-ms-1549-07-c?as=iiif">
   <Work.Content>
     <Work.Description>
       Kaupanger-fragmentene. Universitetsbiblioteket i Bergen.
@@ -41,7 +41,7 @@ Eller enda sjeldnere - at de dukker opp under en arkeologisk utgravning. Det var
 
 Gjenbruken av pergament-manuskripter som materiale til å skrive på, kan også være så møysommelig at den originale teksten er borte. Slik som fragmentet av franske missalet fra 1100-tallet. Boksiden er blitt skåret ut og teksten på den ene siden er skrapt helt bort! Deretter ble ny tekst skrevet på, og datert i 1570; bokbladet ble gjenbrukt som et diplom - et juridisk dokument som her vitner om en eiendomshandel i tidligere Sogn og Fjordane. Det er kanskje derfor dette fragmentet har overlevd også.
 
-<Work iiifContent="https://api.ub.uib.no/items/ubb-ms-1550-5?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/object/ubb-ms-1550-5?as=iiif">
   <Work.Content>
     <Work.Description>
       &quot;Framsiden&quot;: Nordfjord missale-fragmentet. Universitetsbiblioteket i Bergen.
@@ -53,7 +53,7 @@ Gjenbruken av pergament-manuskripter som materiale til å skrive på, kan også 
 </Work>
 
 
-<Work iiifContent="https://api.ub.uib.no/items/ubb-diplom-0272?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/object/ubb-diplom-0272?as=iiif">
   <Work.Content>
     <Work.Description>
       &quot;Baksiden&quot;: Diplom datert 1570, 24. juni. Såreim (Breim, Sogn og Fjordane). Universitetsbiblioteket i Bergen.
