--- a/content/tema/bokstaver-og-tegn/ms-28.mdx
+++ b/content/tema/bokstaver-og-tegn/ms-28.mdx
@@ -29,7 +29,7 @@ På lesesalen vår står en faksimileutgave (av papir) som vår pensjonerte bokb
 <a href="https://www.uib.no/ub/spesialsamlingene/159879/en-middelaldersk-pergament-codex">Godbiter fra samlingene: En middelaldersk pergament-codex</a>.
 
 **Bla i den håndskrevne boken i Marcus:**
-<Work iiifContent="https://api.ub.uib.no/items/ubb-ms-0028?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/object/ubb-ms-0028?as=iiif">
   <Work.Content>
     <Work.Description>
       Ms 28. «"Ieronymi commentariorum super Mathæum liber"». Universitetsbiblioteket i Bergen.
