--- a/content/tema/helse/armauer-hansen.mdx
+++ b/content/tema/helse/armauer-hansen.mdx
@@ -21,7 +21,7 @@ Armauer Hansen var utdannet lege og arbeidet ved St. Jørgens Hospital og Pleies
 
 I boksamlingen med de sjeldneste bøkene står et fransk særtrykk, Armauer Hansens publikasjon om lepra utgitt i Frankrike i 1880, han utdannet verden om den bakteriologiske opprinnelsen til lepra.
 
-<Work iiifContent="https://api.ub.uib.no/items/ubb-librar-o-0193?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/object/ubb-librar-o-0193?as=iiif">
   <Work.Content>
     <Work.Description>
       «Bacillus leprae : études sur la bactérie de la lèpre». Særtrykk av: Archives de biologie, 1 (1880). Universitetsbiblioteket i Bergen.
@@ -32,9 +32,6 @@ I boksamlingen med de sjeldneste bøkene står et fransk særtrykk, Armauer Hans
   </Work.Content>
 </Work>
 
-
-Les mer om Gerhard Armauer Hansen og lepraforskningen i &quot;200 Fortellinger&quot;: 
-<a href="https://tohundrefortellinger.w.uib.no/1873/10/04/1873-armauer-hansen-oppdager-leprabasillen/">1873 Gerhard Armauer Hansens – berømt, feiret og omdiskutert – To hundre fortellinger på to hundre år</a>.
-
+Les mer om Gerhard Armauer Hansen og lepraforskningen i "200 Fortellinger": <a href="https://tohundrefortellinger.w.uib.no/1873/10/04/1873-armauer-hansen-oppdager-leprabasillen/">1873 Gerhard Armauer Hansens – berømt, feiret og omdiskutert – To hundre fortellinger på to hundre år</a>.
 
 </ContentGrid>
