--- a/content/tema/helse/utbrettbar.mdx
+++ b/content/tema/helse/utbrettbar.mdx
@@ -19,8 +19,7 @@ Helt fra 1600-tallet har anatomiske klaffebøker blitt produsert. Disse bøkene 
 Enkelte av de medisinske klaffebøkene fra 1800-tallet har funnet sin vei til samlingene våre, gitt som gaver til museet. De er produsert på forskjellige forlag, og det viser hvor vanlig disse var fra midten til slutten av 1800-tallet.
 
 
-
-<Work iiifContent="https://api.ub.uib.no/items/ubb-romertall-oktav-ii-b-2-sch-01?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/object/ubb-romertall-oktav-ii-b-2-sch-01?as=iiif">
   <Work.Content>
     <Work.Description>
       «Anatomie des menschlichen Kopfes mit Einschluss des Halses in Bild und Beschreibung : Zeichnungen nach Angabe des Verfassers». Universitetsbiblioteket i Bergen.
@@ -31,7 +30,7 @@ Enkelte av de medisinske klaffebøkene fra 1800-tallet har funnet sin vei til sa
   </Work.Content>
 </Work>
 
-<Work iiifContent="https://api.ub.uib.no/items/ubb-romertall-oktav-ii-b-2-sch-02?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/object/ubb-romertall-oktav-ii-b-2-sch-02?as=iiif">
   <Work.Content>
     <Work.Description>
       «Menneskets legeme : anskuelig fremstilling af dets bygning og dets organer : med forklarende tekst : tegninger efter forfatterens opgivelse». Universitetsbiblioteket i Bergen.
@@ -43,7 +42,7 @@ Enkelte av de medisinske klaffebøkene fra 1800-tallet har funnet sin vei til sa
 </Work>
 
 
-<Work iiifContent="https://api.ub.uib.no/items/ubb-romertall-oktav-ii-b-2-ebe-01?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/object/ubb-romertall-oktav-ii-b-2-ebe-01?as=iiif">
   <Work.Content>
     <Work.Description>
       «Der Mensch, oder wie es in unserem Kørper aussieht und wie seine Organe arbeiten». Universitetsbiblioteket i Bergen.
