--- a/content/tema/tid-og-rom/solur.mdx
+++ b/content/tema/tid-og-rom/solur.mdx
@@ -52,7 +52,7 @@ Ser man nærmere på Universitetsmuseets akvarell over “Udsteens Kloster” ma
   </Figure.Content>
 </Figure>
 
-<Work iiifContent="https://api.ub.uib.no/items/ubm-bf-diby-000477?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/object/ubm-bf-diby-000477?as=iiif">
   <Work.Content>
     <Work.Description>
       Her kan man se nøye på detaljene i bildet, kan du se soluret? Utstein Kloster. Akvarell malt av Catharine Hermine Kølle, rundt 1805. Foto: Svein Skare. Universitetsmuseets i Bergen.
