Remove margin from ContentGrid in multiple files for consistent layout

--- a/content/tema/bokstaver-og-tegn/fragmenter.mdx
+++ b/content/tema/bokstaver-og-tegn/fragmenter.mdx
@@ -8,7 +8,7 @@ keywords:
   - diplom
 ---
 
-<ContentGrid className="mt-10">
+<ContentGrid>
 ![Fragmenter av et kalendarium](/images/bokstaver-og-tegn/ubb-ms-1550-4.jpg)
 *Fragmenter av et kalendarium fra slutten av 1100-tallet. Universitetsbiblioteket i Bergen.*
 
