--- a/content/tema/bokstaver-og-tegn/ms-28.mdx
+++ b/content/tema/bokstaver-og-tegn/ms-28.mdx
@@ -8,7 +8,7 @@ keywords:
   - middelalderen
 ---
 
-<ContentGrid className="mt-10">
+<ContentGrid>
 ![Håndskrevet pergamentbok](/images/bokstaver-og-tegn/ubb-ms-0028-p005.jpg)
 *Et nydelig sideblad fra Ms 28. Universitetsbiblioteket i Bergen.*
 
