--- a/content/tema/bokstaver-og-tegn/spesialutfordringen-julia-king.mdx
+++ b/content/tema/bokstaver-og-tegn/spesialutfordringen-julia-king.mdx
@@ -9,7 +9,7 @@ keywords:
   - julia king
 ---
 
-<ContentGrid className="mt-10">
+<ContentGrid>
 # Spesialutfordringen - Julia Kings reisende middelalderdokument
 
 <Video src="https://youtu.be/lk4wKpODLA0?si=IuJrBqK76jZS-EFx" />
