--- a/content/tema/helse/armauer-hansen.mdx
+++ b/content/tema/helse/armauer-hansen.mdx
@@ -8,7 +8,7 @@ keywords:
   - medisin
 ---
 
-<ContentGrid className="mt-10">
+<ContentGrid>
 ![Portrett av Armauer Hansen](/images/helse/ubb-kk-n-389-041.jpg)
 *Portrett av Gerhard Armauer Hansen. Reprodusert av Atelier Kk. Ukjent fotograf. Universitetsbiblioteket i Bergen.*
 
