--- a/content/tema/helse/utbrettbar.mdx
+++ b/content/tema/helse/utbrettbar.mdx
@@ -8,7 +8,7 @@ keywords:
   - tegning
 ---
 
-<ContentGrid className="mt-10">
+<ContentGrid>
 ![Tegning av et hode](//nav-card-images/ubb-romertall-oktav-ii-b-2-sch-01b-icon.jpg)
 *Tegning av et hode med klaffer som kan løftes opp. Fra boken Anatomie des menschlichen Kopfes. Universitetsbiblioteket i Bergen.*
 
