--- a/content/tema/tid-og-rom/bergen-1740.mdx
+++ b/content/tema/tid-og-rom/bergen-1740.mdx
@@ -7,7 +7,7 @@ keywords:
   - bergen
 ---
 
-<ContentGrid className="mt-10">
+<ContentGrid>
 # Godbiter fra Samlingene - Bergenskartet fra 1740
 
 <Video src="https://youtu.be/dh1xCiaM-sk?si=nDfmYw0S4bXH91Ql" />
