--- a/content/tema/tid-og-rom/kortere-aar.mdx
+++ b/content/tema/tid-og-rom/kortere-aar.mdx
@@ -8,7 +8,7 @@ keywords:
   - normaltid
 ---
 
-<ContentGrid className="mt-10">
+<ContentGrid>
 
 
 # 1894 – året som ble 39 minutter kortere i Bergen
