--- a/content/tema/vekster/spesialutfordringen-dagfinn-moe.mdx
+++ b/content/tema/vekster/spesialutfordringen-dagfinn-moe.mdx
@@ -9,7 +9,7 @@ keywords:
   - christieparken
 ---
 
-<ContentGrid className="mt-10">
+<ContentGrid>
 # Spesialutfordringen - Dagfinn Moe og den hemmelege hagen
 
 <Video src="https://youtu.be/nQB-cVF_wNo?si=0TYwa_0e8jsivq9R" />
