--- a/content/tema/helse/reiseapotek.mdx
+++ b/content/tema/helse/reiseapotek.mdx
@@ -8,7 +8,7 @@ keywords:
   - medisin
 ---
 
-<ContentGrid className="mt-10">
+<ContentGrid>
 ![Tegning av Christie ](/images/helse/ubb-bros-05877b.jpg)
 *Portrettegning av W.F.K. Christie, ukjent kunstner. Avfotografering fra Brosings fotosamling. Universitetsbiblioteket i Bergen.*
 
