--- a/content/tema/tid-og-rom/scholeusstikket.mdx
+++ b/content/tema/tid-og-rom/scholeusstikket.mdx
@@ -8,7 +8,7 @@ keywords:
   - byhistorie
 ---
 
-<ContentGrid className="mt-10">
+<ContentGrid>
 # Godbiter fra Samlingene - Scholeusstikket
 
 <Video src="https://youtu.be/0jRrIEFPGzc?si=62jPgYstmbcfn-H_" />
