Refactor image elements to use Figure component for better structure and accessibility in fragmenter.mdx and ms-28.mdx

--- a/content/tema/bokstaver-og-tegn/fragmenter.mdx
+++ b/content/tema/bokstaver-og-tegn/fragmenter.mdx
@@ -9,19 +9,31 @@ keywords:
 ---
 
 <ContentGrid>
-![Fragmenter av et kalendarium](/images/bokstaver-og-tegn/ubb-ms-1550-4.jpg)
-*Fragmenter av et kalendarium fra slutten av 1100-tallet. Universitetsbiblioteket i Bergen.*
 
 # Fragmenter
 
 Det er hovedsakelig fragmenter av håndskrifter og inkunabler vi tenker på når vi snakker om fragmenter. (En inkunabel er en bok trykket i perioden fra boktrykkerkunsten ble oppfunnet til slutten av 1400-tallet).
 
+<Figure image="/images/bokstaver-og-tegn/ubb-ms-1550-4.jpg" alt="Fragmenter av et kalendarium" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Fragmenter av et kalendarium fra slutten av 1100-tallet. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
+
 <a href="https://marcus.uib.no/instance/collection/fragmentsamlingen">Fragmentsamlingen kan man se i Marcus</a> - legg merke til at det er flest latinske fragment. Formen på noen av fragmentene avslører også at de er blitt gjenbrukt som bokbind.
 
 Når en bok etter lang tids (kanskje uvøren) bruk går litt i oppløsning, så kan rester av gamle middelalder-håndskrifter plutselig komme til syne.
 
+<Figure size="full" image="/images/bokstaver-og-tegn/ubb-ms-2159-a-002.jpg" alt="Fragmenter på bokrygg" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Fragmenter på bokrygg. Funnet i Librar q24.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
-![Fragmenter på bokrygg](/images/bokstaver-og-tegn/ubb-ms-2159-a-002.jpg)
 *Her ser vi hvordan middelalderfragmentene er blitt gjenbrukt til å forsterke bokryggen. Funnet i Librar q24.*
 
 
