--- a/content/tema/dyr/nordspisshvalen.mdx
+++ b/content/tema/dyr/nordspisshvalen.mdx
@@ -12,46 +12,39 @@ keywords:
 
 # Nordspisshvalen
  
- En bildereise fra hagen til museet
+En bildereise fra hagen til museet
 
-<Figure image="/images/dyr/ubb-bgm-nordspisshval-01.jpg" alt="Nordspisshvalen på en vogn i hagen til Bergens Museum" width={2000} height={1000}>
-  <Figure.Content>
-    <Figure.Description>
-      Nordspisshvalen på en vogn i hagen til Bergens Museum. Ukjent fotograf. Universitetsbiblioteket i Bergen.
-    </Figure.Description>
-  </Figure.Content>
-</Figure>
-
-<Figure image="/images/dyr/ubb-ms-1478-2-002.jpg" alt="Tegning av nordspisshvalen" width={2000} height={1000}>
-  <Figure.Content>
-    <Figure.Description>
-      Nordspisshvalen, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.
-    </Figure.Description>
-  </Figure.Content>
-</Figure>
-
-<Figure image="/images/dyr/ubb-bgm-nordspisshval-02.jpg" alt="Man holder opp en stor modell av nordspisshvalen på Bergens Museum" width={2000} height={1000}>
-  <Figure.Content>
-    <Figure.Description>
-      Modell av Nordspisshvalen på Bergens Museum. Ukjent fotograf. Universitetsbiblioteket i Bergen.
-    </Figure.Description>
-  </Figure.Content>
-</Figure>
-
-<Figure image="/images/dyr/ubb-ms-1478-2-001.jpg" alt="" width={2000} height={1000}>
-  <Figure.Content>
-    <Figure.Description>
-      Nordspisshvalen, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.
-    </Figure.Description>
-  </Figure.Content>
-</Figure>
-
-<Figure image="/images/dyr/ubb-bgm-bok-1904-01.jpg" alt="" width={2000} height={1000}>
-  <Figure.Content>
-    <Figure.Description>
-      Henrich Buchers tegninger av Nordspisshvalen i Bergens Museums årbok 1904. Universitetsbiblioteket i Bergen.
-    </Figure.Description>
-  </Figure.Content>
-</Figure>
+<ImageCarousel className="feature">
+  <ImageCarousel.Item 
+    image="/images/dyr/ubb-bgm-nordspisshval-01.jpg" 
+    imageAlt="Nordspisshvalen på en vogn i hagen til Bergens Museum" 
+  >
+    Nordspisshvalen på en vogn i hagen til Bergens Museum. Ukjent fotograf. Universitetsbiblioteket i Bergen.
+  </ImageCarousel.Item>
+  <ImageCarousel.Item 
+    image="/images/dyr/ubb-ms-1478-2-002.jpg" 
+    imageAlt="Tegning av nordspisshvalen" 
+  >
+    Nordspisshvalen, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.
+  </ImageCarousel.Item>
+  <ImageCarousel.Item 
+    image="/images/dyr/ubb-bgm-nordspisshval-02.jpg" 
+    imageAlt="Man holder opp en stor modell av nordspisshvalen på Bergens Museum" 
+  >
+    Modell av Nordspisshvalen på Bergens Museum. Ukjent fotograf. Universitetsbiblioteket i Bergen.
+  </ImageCarousel.Item>
+  <ImageCarousel.Item 
+    image="/images/dyr/ubb-ms-1478-2-001.jpg" 
+    imageAlt="" 
+  >
+    Nordspisshvalen, tegnet av Henrich Bucher jr. Universitetsbiblioteket i Bergen.
+  </ImageCarousel.Item>
+  <ImageCarousel.Item 
+    image="/images/dyr/ubb-bgm-bok-1904-01.jpg" 
+    imageAlt="" 
+  >
+    Henrich Buchers tegninger av Nordspisshvalen i Bergens Museums årbok 1904. Universitetsbiblioteket i Bergen.
+  </ImageCarousel.Item>
+</ImageCarousel>
 
 </ContentGrid>
