Update health topic metadata and add new content for "Et menneske i klaffer" while renaming the corresponding href for improved navigation.

--- a/content/tema/helse/index.mdx
+++ b/content/tema/helse/index.mdx
@@ -47,7 +47,7 @@ Eldre bøker om medisin og legemidler er også bevart i samlingen, men i motsetn
     description="Utbrettbar anatomi" 
     image="/nav-card-images/ubb-romertall-oktav-ii-b-2-sch-01b-icon.jpg" 
     imageAlt="Tegning av hode" 
-    href="/tema/helse/utbrettbar" 
+    href="/tema/helse/et-menneske-i-klaffer" 
   />
   
   <Card 
