--- a/content/tema/helse/christies-reiseapotek.mdx
+++ b/content/tema/helse/christies-reiseapotek.mdx
@@ -1,5 +1,5 @@
 ---
-title: Christie sitt reiseapotek
+title: Christies reiseapotek
 description: Om treskrinet han hadde med på sine reiser.
 keywords: 
   - reiseapotek
@@ -9,12 +9,17 @@ keywords:
 ---
 
 <ContentGrid>
-![Tegning av Christie ](/images/helse/ubb-bros-05877b.jpg)
-*Portrettegning av W.F.K. Christie, ukjent kunstner. Avfotografering fra Brosings fotosamling. Universitetsbiblioteket i Bergen.*
-
 # Christies reiseapotek
 
 Å ta vare på egen helse var viktig, spesielt på reise når det var langt til nærmeste doktor. Førstehjelpsutstyr er i dag gjerne en liten mappe man hiver med i tursekken. Men, på Christies tid var et reiseapotek en ordentlig oppakning, en stor trekasse, fylt med det man måtte trenge av medisiner og remedier.
+
+<Figure image="/images/helse/ubb-bros-05877b.jpg" alt="Tegning av Christie" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Portrettegning av W.F.K. Christie, ukjent kunstner. Avfotografering fra Brosings fotosamling. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Se bilder av, og les mer om det fascinerende reiseapoteket til W.F.K. Christie i "200 Fortellinger": <a href="https://tohundrefortellinger.w.uib.no/1847/09/27/1847-christies-reiseapotek/">1847 Christies reiseapotek – To hundre fortellinger på to hundre år</a>.
 
