--- a/content/tema/helse/gerhard-armauer-hansen-og-lepraforskningen.mdx
+++ b/content/tema/helse/gerhard-armauer-hansen-og-lepraforskningen.mdx
@@ -9,13 +9,17 @@ keywords:
 ---
 
 <ContentGrid>
-![Portrett av Armauer Hansen](/images/helse/ubb-kk-n-389-041.jpg)
-*Portrett av Gerhard Armauer Hansen. Reprodusert av Atelier Kk. Ukjent fotograf. Universitetsbiblioteket i Bergen.*
-
-
 # Gerhard Armauer Hansen og lepraforskningen
 
 Blant de tidligere ansatte ved Bergens museum, er få like verdensberømte som Gerhard Armauer Hansen – mannen som oppdaget leprabasillen. Til tross for den meget omdiskuterte forskningen, er Armauer Hansens historie blitt en integrert del av Bergens Museums historie.
+
+<Figure mode="portrait" image="/images/helse/ubb-kk-n-389-041.jpg" alt="Portrett av Armauer Hansen" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Portrett av Gerhard Armauer Hansen. Reprodusert av Atelier Kk. Ukjent fotograf. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Armauer Hansen var utdannet lege og arbeidet ved St. Jørgens Hospital og Pleiestiftelsen for Spedalske i Bergen. Han ble internasjonalt kjent for å ha oppdaget lepra-bakterien i 1873, og sykdommen er nå internasjonalt kjent som «Hansen’s disease». Han ble medlem av styret på Bergens Museum i 1872 og ble preses (leder) i 1894. I tillegg til være redaktør for tidsskriftet «Naturen», publiserte han også <a href="https://marcus.uib.no/naturen/?q=gerhard%20armauer%20hansen&filter=type.exact%23Nummer&filter=isDigitized%23Digitalisert">en rekke artikler</a> om alt fra helse til Darwinisme og hvalfangst. Han var også tilknyttet arbeidet med bearbeidelse av vitenskapelige funn fra Nordhavsekspedisjonen.
 
