Refactor image presentation in visuell-geologi.mdx by replacing static image elements with an ImageCarousel for improved visual display and user engagement.

--- a/content/tema/stein/visuell-geologi.mdx
+++ b/content/tema/stein/visuell-geologi.mdx
@@ -14,20 +14,32 @@ keywords:
 
 Geologisk forskning på Bergens Museum ble dokumentert og formidlet i flere ulike formater.
 
-![Stein med korallfossiler](/images/stein/ubb-korallfossil.jpg)
-*Korallfossil utstilt på Universitetsmuseet i Bergen, funnet av Olaf Hanssen i Hegglandsdalen i Os. Fotograf: Ola Søndenå.*
-
-
-![Feltdagbok med foto](/images/stein/ubb-ms-2093-l-1-084-012.jpg)
-*Korallfossiler fra Hegglandsdalen i Os, fra Astrid Monsens feltbok-fotoalbum fra Os. Fotograf: Astrid Monsen. Universitetsbiblioteket i Bergen.*
-
-
-![Astrid Monsen i felten](/images/stein/ubb-ms-2093-l-1-027-029.jpg)
-*Astrid Monsen på feltarbeid. Fotograf ukjent. Universitetsbiblioteket i Bergen.*
-
-
-![Geologisk kart fra museets årbok](/images/stein/ubb-bgm-bok-1920-21.jpg)
-*«Geologisk kart over Kvamshestens felt», av Carl Fredrik Kolderup og Jens Omvik. Fra Bergens Museums årbok, 1920-21. Universitetsbiblioteket i Bergen.*
+<ImageCarousel className="feature">
+  <ImageCarousel.Item 
+    image="/images/stein/ubb-korallfossil.jpg" 
+    imageAlt="Stein med korallfossiler" 
+  >
+    Korallfossil utstilt på Universitetsmuseet i Bergen, funnet av Olaf Hanssen i Hegglandsdalen i Os. Fotograf: Ola Søndenå.
+  </ImageCarousel.Item>
+  <ImageCarousel.Item 
+    image="/images/stein/ubb-ms-2093-l-1-084-012.jpg" 
+    imageAlt="Feltdagbok med foto" 
+  >
+    Korallfossiler fra Hegglandsdalen i Os, fra Astrid Monsens feltbok-fotoalbum fra Os. Fotograf: Astrid Monsen. Universitetsbiblioteket i Bergen.
+  </ImageCarousel.Item>
+  <ImageCarousel.Item 
+    image="/images/stein/ubb-ms-2093-l-1-027-029.jpg" 
+    imageAlt="Astrid Monsen i felten" 
+  >
+    Astrid Monsen på feltarbeid. Fotograf ukjent. Universitetsbiblioteket i Bergen.
+  </ImageCarousel.Item>
+  <ImageCarousel.Item 
+    image="/images/stein/ubb-bgm-bok-1920-21.jpg" 
+    imageAlt="Geologisk kart fra museets årbok" 
+  >
+    «Geologisk kart over Kvamshestens felt», av Carl Fredrik Kolderup og Jens Omvik. Fra Bergens Museums årbok, 1920-21. Universitetsbiblioteket i Bergen.
+  </ImageCarousel.Item>
+</ImageCarousel>
 
 
 </ContentGrid>
