--- a/content/tema/tid-og-rom/bergen-1740.mdx
+++ b/content/tema/tid-og-rom/bergen-1740.mdx
@@ -11,11 +11,17 @@ keywords:
 # Godbiter fra Samlingene - Bergenskartet fra 1740
 
 <Video src="https://youtu.be/dh1xCiaM-sk?si=nDfmYw0S4bXH91Ql" />
+
 <a href="https://www.youtube.com/playlist?list=PLf8ZIYfAO0qjcPcxRREhodT91kLQqy6pI">Flere videoer fra Godbiter fra Samlingene kan du se her!</a>
 
 <a href="https://www.unimus.no/portal/#/things/4f4590b6-4513-42e7-add8-9cb9dcb88518">Gå til Unimusportalen for å se alle detaljene i kartet!</a>
 
-![Bergenskart 1740](/images/tid-og-rom/Bf_By_9910_DiBy_156.jpg)
-*Kart over Bergen. Fra ca. 1740. Foto: Svein Skare. Universitetsmuseet i Bergen.*
+<Figure size="feature" image="/images/tid-og-rom/Bf_By_9910_DiBy_156.jpg" alt="Bergenskart 1740" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Kart over Bergen. Fra ca. 1740. Foto: Svein Skare. Universitetsmuseet i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 </ContentGrid>
