--- a/content/tema/hverdag/index.mdx
+++ b/content/tema/hverdag/index.mdx
@@ -53,7 +53,7 @@ Kanskje vi også skal tenke på hvordan vår hverdag blir dokumentert for fremti
     description="Guldguult. Svovlguult. Citronguult." 
     image="/nav-card-images/ubb-spesmag-0018a-icon.jpg" 
     imageAlt="Utsnitt av bok om tøyfarging" 
-    href="/tema/hverdag/farging-av-toey" 
+    href="/tema/hverdag/gult" 
   />
   
   <Card title="Klesvask" 
