--- a/content/menneskene/index.mdx
+++ b/content/menneskene/index.mdx
@@ -323,7 +323,7 @@ import {Cards, Card} from '@/components/card'
     description="Geolog" 
     image="/images/menneskene/ubb-ms-2093-T-001-022-thomas-christian-thomassen.jpg" 
     imageAlt="Portrett av Thomas Christian Thomassen" 
-    href="https://snl.no/Thomas_Christian_Thomassen"
+    href="/tema/stein/geologi-og-folkeliv-i-hardanger"
     rounded={false}
   />
   <Card
