Update 'samlinger-pa-flyttefot' to 'samlinger-paa-flyttefot' for consistency, replace carousel image.

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -39,7 +39,7 @@ Portalen vil kontinuerlig utvides og utvikles med mer materiale.
   <Carousel.Item 
     title="Samlingene og tilvekst" 
     href="/samlingene-og-tilvekst" 
-    image="/images/menneskene/Bergen_Museum_Forhandlingsprotokoll.jpg"
+    image="/images/en-institusjon-blir-til/ubb-kk-n-374-067_md.jpg"
     imageAlt="En institusjon blir til" 
   />
   <Carousel.Item 
@@ -50,7 +50,7 @@ Portalen vil kontinuerlig utvides og utvikles med mer materiale.
   />
   <Carousel.Item 
     title="Samlinger på flyttefot" 
-    href="/samlinger-pa-flyttefot" 
+    href="/samlinger-paa-flyttefot" 
     image="/images/en-institusjon-blir-til/Flytting_13_02_2019_002.jpg" 
     imageAlt="Foto av et langt dyr, trolig slange flyttes av 7 mennesker, utenfor museumsbygningen" 
   />
