Update imageAlt and href attributes for Magdalene Abel card in 'menneskene' section to enhance accessibility and provide a direct link to her biography.

--- a/content/menneskene/index.mdx
+++ b/content/menneskene/index.mdx
@@ -58,8 +58,8 @@ import {Cards, Card} from '@/components/card'
     title="Magdalene Abel (1869-1944)"
     description="Multitallent, tegner og sektær ved museet" 
     image="/images/menneskene/Magdalene_Abel1.jpg" 
-    imageAlt="Portrett av Magdalene Abel" 
-    href="Svart hvitt foto av kvinne i kjole, sittende i et arkeologisk utgravningsfelt"
+    imageAlt="Svart hvitt foto av kvinne i kjole, sittende i et arkeologisk utgravningsfelt" 
+    href="https://tohundrefortellinger.w.uib.no/1907/09/23/1907-magdalene-abel/"
     rounded={false}
   />
   <Card 
