legg-til-tekst-christie

--- a/content/menneskene/wfk-christie.mdx
+++ b/content/menneskene/wfk-christie.mdx
@@ -12,6 +12,28 @@ import {Cards, Card} from '@/components/card'
 
 # Wilhelm Frimann Koren Christie (1778-1849)
 
+Politiker, embetsmann og grunnlegger av Bergens Museum!
+
+W. F. K. Christie ble født i Kristiansund, men allerede som 10-åring ble han sendt til Bergen for å gå på latinskolen. I 1794 ble han sendt til København og tok juridisk 
+eksamen i 1799. Etter sine studier jobbet han som sekretær i Det danske kanselli. Hvor han lærte nøyaktig arbeid og hvordan prosesser skulle dokumenteres. 
+
+I 1808 reiste Christie tilbake til Bergen, hvor han året etter tilrådte som sorenskriver i Nordhordland. I 1814 representerte han Bergen i Riksforsamlingen på Eidsvoll. 
+Her fikk han en sentral plass, som sekretær. Han var også sentral i forhandlingene med svenskene og kong Karl Johan. Som takk for sin innsats i dette viktige arbeidet ble 
+han skjenket en gullpokal av Stortinget.
+
+Christie satt på Stortinget fra 1815 til 1818, det meste av tiden som stortingspresident. Han ble tilbudt statsrådspost og stilling som høyesterettsjustitiarius av 
+kong Karl Johann, men avslo. Han mente selv at helsen ikke var god nok til disse stillingene. I 1828 sa han ja til å være tollinspektør i Bergen, en stilling han 
+hadde til sin død i 1849.
+
+I april 1825 sendte Christie ut en invitasjon om å opprette et museum. Han fikk stor respons på invitasjonen. Allerede 1. juni 1825 hadde Direksjonen (museumsstyret) sitt 
+første møte og Bergens Museum ble konstituert. Fram til sin død i 1849 jobbet Christie for sitt museumsprosjekt, og han kalte museet ofte for «sin datter».
+
+Christie giftet seg aldri, men fikk to barn utenfor ekteskap, Johan Carl og Wilhelm. I 1822 flytter barna til sin far i Bergen, da moren i København døde.
+
+Christie var godt likt i Bergen, og på folkemunne ble han kalt «Presidenten». Da han skulle begraves bø byen på ekte bergensvær. I styrtende regn og vind gikk 
+begravelsesprosesjonen igjennom byen, men Bergenserne møtte tallrike opp for å ta farvel til sin kjære «President».
+
+
 <Cards id="historier" title="Historier om Christie" className="full pt-10 md:pt-20">
   <Card 
     title="Den reisande Christie" 
