fiks-skrivefeil-kilder-christie

--- a/content/menneskene/wfk-christie.mdx
+++ b/content/menneskene/wfk-christie.mdx
@@ -30,8 +30,10 @@ første møte og Bergens Museum ble konstituert. Fram til sin død i 1849 jobbet
 
 Christie giftet seg aldri, men fikk to barn utenfor ekteskap, Johan Carl og Wilhelm. I 1822 flytter barna til sin far i Bergen, da moren i København døde.
 
-Christie var godt likt i Bergen, og på folkemunne ble han kalt «Presidenten». Da han skulle begraves bø byen på ekte bergensvær. I styrtende regn og vind gikk 
-begravelsesprosesjonen igjennom byen, men Bergenserne møtte tallrike opp for å ta farvel til sin kjære «President».
+Christie var godt likt i Bergen, og på folkemunne ble han kalt «Presidenten». Da han skulle begraves bød byen på ekte bergensvær. I styrtende regn og vind gikk 
+begravelsesprosesjonen igjennom byen, men bergenserne møtte tallrike opp for å ta farvel til sin kjære «President».
+
+(Kilder: Store norske leksikon, "Presidenten" av Runar Jordåen) 
 
 
 <Cards id="historier" title="Historier om Christie" className="full pt-10 md:pt-20">
