legg-til-card-tekst-foto-christie

--- a/content/menneskene/wfk-christie.mdx
+++ b/content/menneskene/wfk-christie.mdx
@@ -31,7 +31,7 @@ første møte og Bergens Museum ble konstituert. Fram til sin død i 1849 jobbet
 Christie giftet seg aldri, men fikk to barn utenfor ekteskap, Johan Carl og Wilhelm. I 1822 flytter barna til sin far i Bergen, da moren i København døde.
 
 Christie var godt likt i Bergen, og på folkemunne ble han kalt «Presidenten». Da han skulle begraves bød byen på ekte bergensvær. I styrtende regn og vind gikk 
-begravelsesprosesjonen igjennom byen, men bergenserne møtte tallrike opp for å ta farvel til sin kjære «President».
+begravelsesprosesjonen igjennom byen, men bergenserne møtte tallrike opp for å ta farvel med sin kjære «President».
 
 (Kilder: Store norske leksikon, "Presidenten" av Runar Jordåen) 
 
@@ -57,6 +57,13 @@ begravelsesprosesjonen igjennom byen, men bergenserne møtte tallrike opp for å
     image="/images/menneskene/By5349_Medisinskrin.jpg" 
     imageAlt="Et skrin i tre, med mange rom til medisin" 
     href="https://tohundrefortellinger.w.uib.no/1847/09/27/1847-christies-reiseapotek/" 
+  />
+  <Card 
+    title="Christies gullpokal" 
+    description="Les mer om hvorfor Christie fikk en gullpokal. (Fotograf: Svein Skare, Universitetsmuseet i Bergen)" 
+    image="/images/nav-card-images/gullpokal_x12291_skare.jpg" 
+    imageAlt="Pokal i gull, med dikt gravert inn" 
+    href="/menneskene/christie-gullpokal.mdx" 
   />
 </Cards>
 </ContentGrid>
