legg-til-tekst-foto-christie

--- a/content/menneskene/christie-gullpokal.mdx
+++ b/content/menneskene/christie-gullpokal.mdx
@@ -1,6 +1,5 @@
 ---
 title: Christies gullpokal!
-description: 
 keywords: 
   - gullpokal
   - christie
@@ -9,6 +8,7 @@ keywords:
 <ContentGrid>
  
 # Christies gullpokal!
+
 W. F. K. Christie hadde hatt en sentral rolle på Eidsvoll i 1814. Han var sekretær for Riksforsamlingen og støttet selvstendighetspartiet. Arkivene 
 bevart fra Eidsvoll beskriver Christie som en skarp jurist, aktiv taler og en som hadde god kontroll på alt det formelle. Han beskrives også som en samlende 
 figur og etter arbeidet på Eidsvoll ble han valgt til formann i komiteen som skulle forhandle med Sverige. Høsten 1814 ble han også Stortingets første president, hvor han 
@@ -40,7 +40,7 @@ vin og sendt rundt «som en Communionskalk», hvor alle tok en slurk og Christie
 
 Christie testamenterte gullpokalen på et senere tidspunkt til Bergens Museum.
 
-(Kilder: «Presidentetn» av Runar Jordåen, UNIMUS for Universitetsmuseet i Bergen)
+(Kilder: «Presidenten» av Runar Jordåen, UNIMUS for Universitetsmuseet i Bergen)
 
  
 </ContentGrid>
