--- a/content/menneskene/wfk-christie.mdx
+++ b/content/menneskene/wfk-christie.mdx
@@ -63,7 +63,7 @@ begravelsesprosesjonen igjennom byen, men bergenserne møtte tallrike opp for å
     description="Les mer om hvorfor Christie fikk en gullpokal. (Fotograf: Svein Skare, Universitetsmuseet i Bergen)" 
     image="/images/menneskene/gullpokal_x12291_skare.jpg" 
     imageAlt="Pokal i gull, med dikt gravert inn" 
-    href="/menneskene/christie-gullpokal.mdx" 
+    href="/menneskene/christie-gullpokal" 
   />
 </Cards>
 </ContentGrid>
