--- a/content/menneskene/wfk-christie.mdx
+++ b/content/menneskene/wfk-christie.mdx
@@ -52,7 +52,7 @@ begravelsesprosesjonen igjennom byen, men bergenserne møtte tallrike opp for å
     href="https://tohundrefortellinger.w.uib.no/1825/01/01/1825-christie-og-neumanns-museum/" 
   />
    <Card 
-    title="Reiseapotek" 
+    title="Christie sitt reiseapotek" 
     description="Les mer om reiseapoteket Christie hadde med på sine mange reiser. (Foto: Universitetsmuseet i Bergen)" 
     image="/images/menneskene/By5349_Medisinskrin.jpg" 
     imageAlt="Et skrin i tre, med mange rom til medisin" 
