--- a/content/menneskene/wfk-christie.mdx
+++ b/content/menneskene/wfk-christie.mdx
@@ -59,7 +59,7 @@ begravelsesprosesjonen igjennom byen, men bergenserne møtte tallrike opp for å
     href="https://tohundrefortellinger.w.uib.no/1847/09/27/1847-christies-reiseapotek/" 
   />
   <Card 
-    title="Christies gullpokal" 
+    title="Christie sin gullpokal" 
     description="Les mer om hvorfor Christie fikk en gullpokal. (Fotograf: Svein Skare, Universitetsmuseet i Bergen)" 
     image="/images/menneskene/gullpokal_x12291_skare.jpg" 
     imageAlt="Pokal i gull, med dikt gravert inn" 
