fiks-sitat-christie

--- a/content/menneskene/christie-gullpokal.mdx
+++ b/content/menneskene/christie-gullpokal.mdx
@@ -18,22 +18,29 @@ Da Christie og den norske delegasjonen vendte hjem fra Sverige i januar 1815 ven
 Christie fortjente en ekstra takk for det omfattende arbeidet og suksessen han hadde oppnådd i 1814. Det ble bestemt at Christie skulle motta en gullpokal. På pokalen 
 ble det gravert inn et dikt av Schmidt:
 
-Som trofast Normand kraftfuld ædel klog. 
-Du vaagede for Norges Held og Hæder
-Som Thingets vise og retskafne Leder 
-Dit lyse Blik hver Taagedunst forjog.
-Thi ærer Dig hver Nordens ægte Søn. 
-Ømt Nora til sin Moderbarm Dig trykker 
-Med festlig Egekrands Din Tindring Smykker 
-Og den skal vorde evig frisk og grøn.
-I Noras Navn vi rækker dig den her 
-Som Hun med Stolthed kalder sig Din Moder 
-Saa nævner hver af os Dig stolt sin Broder 
-Og dybt Dit Minde i sit hierte bær.
-Hvad Hiertet ene fyldest giøre kan, 
-Det varme Hiertes ærlig frie hylding. 
-Meer værd end Hoffets Flitter og Forgylding 
-Det offres Dig Nationens gjæve Mand.
+<Quote>
+Som trofast Normand kraftfuld ædel klog.<br /> 
+Du vaagede for Norges Held og Hæder<br />
+Som Thingets vise og retskafne Leder<br /> 
+Dit lyse Blik hver Taagedunst forjog.<br />
+Thi ærer Dig hver Nordens ægte Søn.<br /> 
+Ømt Nora til sin Moderbarm Dig trykker<br /> 
+Med festlig Egekrands Din Tindring Smykker<br /> 
+Og den skal vorde evig frisk og grøn.<br />
+I Noras Navn vi rækker dig den her<br /> 
+Som Hun med Stolthed kalder sig Din Moder<br /> 
+Saa nævner hver af os Dig stolt sin Broder<br /> 
+Og dybt Dit Minde i sit hierte bær.<br />
+Hvad Hiertet ene fyldest giøre kan,<br /> 
+Det varme Hiertes ærlig frie hylding.<br /> 
+Meer værd end Hoffets Flitter og Forgylding<br /> 
+Det offres Dig Nationens gjæve Mand.<br />
+  <Quote.Source>
+    — Shouted by <cite>[Schmidt, 1814]</cite>
+  </Quote.Source>
+</Quote>
+
+
 
 Christie mottar pokalen i Stortingets møtesal på Katedralskolen 23. januar 1815, sammen med takkehilsninger fra Stortingets representanter. Pokalen ble fylt med 
 vin og sendt rundt «som en Communionskalk», hvor alle tok en slurk og Christie selv tømte den (Jordåen 2014:273f).
