--- a/content/menneskene/christie-gullpokal.mdx
+++ b/content/menneskene/christie-gullpokal.mdx
@@ -16,7 +16,7 @@ var med på å forme de formelle prosessuelle reglene for Stortinget.
 
 Da Christie og den norske delegasjonen vendte hjem fra Sverige i januar 1815 ventet det en overraskelse for Christie. Representantene på Stortinget mente at 
 Christie fortjente en ekstra takk for det omfattende arbeidet og suksessen han hadde oppnådd i 1814. Det ble bestemt at Christie skulle motta en gullpokal. På pokalen 
-ble det gravert inn et dikt av Schmidt:
+ble det gravert inn et dikt:
 
 <Quote>
 Som trofast Normand kraftfuld ædel klog.<br /> 
@@ -36,7 +36,7 @@ Det varme Hiertes ærlig frie hylding.<br />
 Meer værd end Hoffets Flitter og Forgylding<br /> 
 Det offres Dig Nationens gjæve Mand.<br />
   <Quote.Source>
-    — Shouted by <cite>[Schmidt, 1814]</cite>
+    — skrevet av <cite>[Schmidt, 1814]</cite>
   </Quote.Source>
 </Quote>
 
