legg-til-foto-christie

--- a/content/menneskene/christie-gullpokal.mdx
+++ b/content/menneskene/christie-gullpokal.mdx
@@ -47,7 +47,11 @@ vin og sendt rundt «som en Communionskalk», hvor alle tok en slurk og Christie
 
 Christie testamenterte gullpokalen på et senere tidspunkt til Bergens Museum.
 
-(Kilder: «Presidenten» av Runar Jordåen, UNIMUS for Universitetsmuseet i Bergen)
+<Quote>
+  Kilder: <br />«Presidenten» av Runar Jordåen<br />
+  UNIMUS for Universitetsmuseet i Bergen
+</Quote>
+
 
  <ImageCarousel className="feature">
   <ImageCarousel.Item
