add lorem ipsum texts

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -2,6 +2,4 @@
 
 ## Magnus Lagabøtes Bylov i 750 år (1276 - 2026)
 
-Byloven ble vedtatt ...
-
-Universitetsbiblioteket i Bergen ...
+<Lorem p={2}/>
