--- a/content/fra-landslov-til-bylov/index.mdx
+++ b/content/fra-landslov-til-bylov/index.mdx
@@ -1,3 +1,11 @@
 # Fra Landslov til Bylov
 
 <Lorem p={3}/>
+
+<ul className="mt-10">
+    <li><Link href="/fra-landslov-til-bylov/i-juss">I juss</Link></li>
+    <li><Link href="/fra-landslov-til-bylov/i-juss">I tekst og håndskrift</Link></li>
+    <li><Link href="/fra-landslov-til-bylov/i-juss">I utstilling</Link></li>
+    <li><Link href="/fra-landslov-til-bylov/i-juss">Magnus Lagabøte sin rolle</Link></li>
+    <li><Link href="/fra-landslov-til-bylov/i-juss">Retterbøter</Link></li>
+</ul>
