--- a/content/fra-landslov-til-bylov/index.mdx
+++ b/content/fra-landslov-til-bylov/index.mdx
@@ -9,3 +9,5 @@
     <li><Link href="/fra-landslov-til-bylov/i-juss">Magnus Lagabøte sin rolle</Link></li>
     <li><Link href="/fra-landslov-til-bylov/i-juss">Retterbøter</Link></li>
 </ul>
+
+<Card/>
