test loading static html doc

--- a/content/bergens-bylov/byens-kart.mdx
+++ b/content/bergens-bylov/byens-kart.mdx
@@ -1,7 +1,5 @@
 # Byens kart
 
-<Lorem/>
-
-<div className='m-10 border border-4 h-100 bg-sky-100'/>
-
-<Lorem/>
+<div className='m-10 border border-4 h-100'>
+    <Map/>
+</div>
