make map work as iframe

--- a/content/bergens-bylov/byens-kart.mdx
+++ b/content/bergens-bylov/byens-kart.mdx
@@ -1,5 +1,8 @@
 # Byens kart
 
-<div className='m-10 border border-4 h-100'>
-    <Map/>
+<Lorem avgSentencesPerParagraph={4}/>
+
+<div className='m-10 border border-4 h-200'>
+    <iframe src="/map/index.html" className='w-full h-full'/>
 </div>
+    
