prototype cards; include images from Haltenbanken

--- a/content/fra-landslov-til-bylov/index.mdx
+++ b/content/fra-landslov-til-bylov/index.mdx
@@ -2,12 +2,10 @@
 
 <Lorem p={3}/>
 
-<ul className="mt-10">
-    <li><Link href="/fra-landslov-til-bylov/i-juss">I juss</Link></li>
-    <li><Link href="/fra-landslov-til-bylov/i-tekst-og-mss">I tekst og håndskrift</Link></li>
-    <li><Link href="/fra-landslov-til-bylov/i-utstilling">I utstilling</Link></li>
-    <li><Link href="/fra-landslov-til-bylov/magnus">Magnus Lagabøte sin rolle</Link></li>
-    <li><Link href="/fra-landslov-til-bylov/retterboeter">Retterbøter</Link></li>
-</ul>
-
-<Card/>
+<Cards>
+    <Card href='/fra-landslov-til-bylov/i-juss' title="I juss"/>
+    <Card href='/fra-landslov-til-bylov/i-tekst-og-haandskrift' title="I tekst og håndskrift"/>
+    <Card href='/fra-landslov-til-bylov/i-utstilling' title="I utstilling"/>
+    <Card href='/fra-landslov-til-bylov/magnus' title="Magnus Lagabøte sin rolle"/>
+    <Card href='/fra-landslov-til-bylov/retterboeter' title="Retterbøter"/>
+</Cards>
