rename; implement navigation

--- a/content/bergens-bylov/index.mdx
+++ b/content/bergens-bylov/index.mdx
@@ -1,3 +1,11 @@
 # Bergens Bylov
 
 <Lorem p={3}/>
+
+<Cards>
+    <Card href='/bergens-bylov/i-byen' title='I byen'/>
+    <Card href='/bergens-bylov/byens-kart' title='Byens kart'/>
+    <Card href='/bergens-bylov/aarshjul' title='Årshjul'/>
+    <Card href='/bergens-bylov/mennesker' title='Mennesker'/>
+    <Card href='/bergens-bylov/nye-bolker' title='Nye bolker'/>
+</Cards>
