--- a/content/bylovens-etterliv/index.mdx
+++ b/content/bylovens-etterliv/index.mdx
@@ -1,3 +1,9 @@
 # Bylovens etterliv
 
 <Lorem p={3}/>
+
+<Cards>
+    <Card href='/bylovens-etterliv/danske-oversettelser' title='Danske oversettelser'/>
+    <Card href='/bylovens-etterliv/kommuneforvaltning' title='Kommuneforvaltning'/>
+    <Card href='/bylovens-etterliv/nyere-forskning' title='Nyere forskning'/>
+</Cards>
