--- a/content/menneskene/wfk-christie.mdx
+++ b/content/menneskene/wfk-christie.mdx
@@ -2,9 +2,12 @@
 title: Wilhelm Frimann Koren Christie (1778-1849) 
 description: Kort bio Christie.
 keywords: 
+  - christie
+  - Bergens museum
   - museum
-  - samlinger
-  - politiker
+  - embetsmann
+  - grunnlegger
+  - Wilhelm Frimann Koren Christie
 ---
 import {Cards, Card} from '@/components/card'
 
