--- a/content/tema/arkeologi/gravritualer-i-vikingtiden.mdx
+++ b/content/tema/arkeologi/gravritualer-i-vikingtiden.mdx
@@ -2,10 +2,13 @@
 title: Gravritualer i vikingtid
 description: 
 keywords: 
-  - markdown
-  - page
-  - starter
-  - markdown page
+  - arkeologi
+  - vikingtid
+  - skipsgrav
+  - gravritualer
+  - museum
+  - Universitetsmuseet i Bergen
+  - Archeion
 ---
  
 <ContentGrid>
