--- a/content/tema/arkeologi/index.mdx
+++ b/content/tema/arkeologi/index.mdx
@@ -2,8 +2,12 @@
 title: Arkeologi
 description: Dette er en beskrivelse av temaet arkeologi.
 keywords: 
-  - stein
+  - museum
   - arkeologi
+  - kulturminner
+  - museumsarkiv
+  - museumssamlinger
+  - Universitetsmuseet i Bergen
 asIndexPage: true
 ---
 
