--- a/content/tema/glass/index.mdx
+++ b/content/tema/glass/index.mdx
@@ -3,6 +3,9 @@ title: Glass
 description: Dette er en beskrivelse av temaet glass.
 keywords: 
   - glass
+  - museumssamlinger
+  - Universitetsmuseet i Bergen
+  - museumsarkiver
 asIndexPage: true
 ---
 
