--- a/content/tema/glass/octavia-sperati.mdx
+++ b/content/tema/glass/octavia-sperati.mdx
@@ -1,10 +1,11 @@
 ---
 title: Octavias epergne!
 keywords: 
-  - markdown
-  - page
-  - starter
-  - markdown page
+  - octavia sperati
+  - museumssamling
+  - Teatersamlingen
+  - teateret
+  - epergne
 ---
  
 <ContentGrid>
