--- a/content/tema/verden-i-bergen/index.mdx
+++ b/content/tema/verden-i-bergen/index.mdx
@@ -3,8 +3,10 @@ title: Verden i Bergen
 description: Dette er en beskrivelse av temaet Verden i Bergen.
 keywords: 
   - etnografi
-  - land
+  - landmuseumssamlinger
   - samlinger
+  - museumsarkiver
+  - katalog
 asIndexPage: true
 ---
 
