--- a/content/tema/arkeologi/bevare-for-evigheten.mdx
+++ b/content/tema/arkeologi/bevare-for-evigheten.mdx
@@ -2,10 +2,14 @@
 title: Å bevare for evigheten!
 description: 
 keywords: 
-  - markdown
-  - page
-  - starter
-  - markdown page
+  - arkeologi
+  - museumssamling
+  - samlinger
+  - pilespiss
+  - bevaring
+  - museum
+  - Arkiv
+  - museumsarkiv
 ---
  
 <ContentGrid>
