--- a/content/tema/verden-i-bergen/index.mdx
+++ b/content/tema/verden-i-bergen/index.mdx
@@ -3,7 +3,7 @@ title: Verden i Bergen
 description: Dette er en beskrivelse av temaet Verden i Bergen.
 keywords: 
   - etnografi
-  - landmuseumssamlinger
+  - museumssamlinger
   - samlinger
   - museumsarkiver
   - katalog
