make responsive homepage hero

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,5 +1,9 @@
-# Velkommen!
+import HomepageHero from "@/components/homepage-hero";
 
-## Magnus Lagabøtes Bylov i 750 år (1276 - 2026)
+<HomepageHero 
+    title={<>Bylovsjubileet<br/>1276&ndash;2026</>} 
+    ingress="Magnus Lagabøtes bylov i 750 år"
+    footer="Digital utstilling ved Universitetet i Bergen"
+/>
 
 <Lorem p={2}/>
