use Haltenbanken's color scheme for homepage hero

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -7,3 +7,10 @@ import HomepageHero from "@/components/homepage-hero";
 />
 
 <Lorem p={2}/>
+
+<Cards>
+    <Card href='/fra-landslov-til-bylov' title="Fra Landslov til Bylov"/>
+    <Card href='/bergens-bylov' title="Bergens Bylov"/>
+    <Card href='/byloven-og-skriftkultur' title="Byloven og skriftkultur"/>
+    <Card href='/bylovens-etterliv' title="Bylovens etterliv"/>
+</Cards>
