--- a/content/kreditering.mdx
+++ b/content/kreditering.mdx
@@ -3,13 +3,20 @@
 Denne utstillingen er laget av Universitetet i Bergen
 
 ## Universitetsbiblioteket
-- Alexandros Tsakos
-- Peder Gammeltoft
-- Robert K. Paulsen
+- [Alexandros Tsakos](https://www4.uib.no/finn-ansatte/Alexandros.Tsakos)
+- [Bjørn Arvid Bagge](https://www4.uib.no/finn-ansatte/Bj%C3%B8rn.Arvid.Bagge)
+- [Peder Gammeltoft](https://www4.uib.no/finn-ansatte/Peder.Gammeltoft)
+- [Robert K. Paulsen](https://www4.uib.no/finn-ansatte/Robert.Kristof.Paulsen)
 
-## LLE
-- Helen Leslie-Jacobsen
-- Stefan Drechsler
+## Det juridiske fakultet
+- [Brage Thunestvedt Hatløy](https://www4.uib.no/finn-ansatte/Brage.Thunestvedt.Hatl%C3%B8y)
 
-## AHKR
-- 
+## Institutt for arkeologi, historie, kultur- og religionsvitenskap
+- [Arne Solli](https://www4.uib.no/finn-ansatte/Arne.Solli)
+
+## Institutt for lingvistiske, litterære og estetiske studier
+- [Helen F. Leslie-Jacobsen](https://www4.uib.no/finn-ansatte/Helen.F.Leslie-Jacobsen)
+- [Stefan Drechsler](https://www4.uib.no/finn-ansatte/Stefan.Drechsler)
+
+## Universitetsmuseet
+- [Alf Tore Hommedal](https://www4.uib.no/finn-ansatte/Alf.Tore.Hommedal)
