implement sub-hero

--- a/content/byloven-og-skriftkultur/index.mdx
+++ b/content/byloven-og-skriftkultur/index.mdx
@@ -1,4 +1,8 @@
-# Byloven og skriftkultur
+---
+title: 'Byloven og skriftkultur'
+---
+
+<SubHero title="Byloven og skriftkultur"/>
 
 <Lorem p={3}/>
 
