--- a/content/fra-landslov-til-bylov/index.mdx
+++ b/content/fra-landslov-til-bylov/index.mdx
@@ -1,4 +1,8 @@
-# Fra Landslov til Bylov
+---
+title: 'Fra Landslov til Bylov'
+---
+
+<SubHero title="Fra Landslov til Bylov"/>
 
 <Lorem p={3}/>
 
